; ModuleID = '/home/carl/AnghaBench/redis/src/extr_rdb.c_rdbLoadMillisecondTime.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_rdb.c_rdbLoadMillisecondTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LLONG_MAX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @rdbLoadMillisecondTime(i32* %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = call i64 @rioRead(i32* %7, i64* %6, i32 8)
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i64, i64* @LLONG_MAX, align 8
  store i64 %11, i64* %3, align 8
  br label %19

12:                                               ; preds = %2
  %13 = load i32, i32* %5, align 4
  %14 = icmp sge i32 %13, 9
  br i1 %14, label %15, label %17

15:                                               ; preds = %12
  %16 = call i32 @memrev64ifbe(i64* %6)
  br label %17

17:                                               ; preds = %15, %12
  %18 = load i64, i64* %6, align 8
  store i64 %18, i64* %3, align 8
  br label %19

19:                                               ; preds = %17, %10
  %20 = load i64, i64* %3, align 8
  ret i64 %20
}

declare dso_local i64 @rioRead(i32*, i64*, i32) #1

declare dso_local i32 @memrev64ifbe(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
